--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,3 @@
-/* This file is for your main application css. */
-
-@import "./phoenix.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
