--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
+
+.base-text-input {
+  @apply bg-gray-200 appearance-none border-2 border border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight
+}
+
+.base-text-input:focus {
+  @apply outline-none bg-white border-blue-500
+}
+
+.base-submit-btn {
+  @apply rounded bg-blue-500 text-white py-2 px-4 border-2 border border-blue-500
+}
+
+.base-submit-btn:hover {
+  @apply bg-blue-700 border-blue-700
+}
+
 @tailwind utilities;
