--- a/lib/listz_web/templates/layout/app.html.eex
+++ b/lib/listz_web/templates/layout/app.html.eex
@@ -16,6 +16,15 @@
       </section>
     </header>
     <main role="main" class="container mx-auto max-w-md py-2">
+      <%= if @current_user do %>
+        <div class="flex my-4">
+          <div class="flex-1">
+            Logged in as: <%= @current_user.email %>
+          </div>
+
+          <%= link "Logout", to: Routes.pow_session_path(@conn, :delete), method: :delete, class: "text-blue-600" %>
+        </div>
+      <% end %>
       <%= if get_flash(@conn, :error) do %>
         <div class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4" role="alert">
           <p><%= get_flash(@conn, :error) %></p>
