--- a/lib/listz_web/templates/list/edit.html.eex
+++ b/lib/listz_web/templates/list/edit.html.eex
@@ -1,5 +1,3 @@
-<h1>Edit List</h1>
+<h1 class="font-bold text-xl mb-6 mt-8">Edit List</h1>
 
 <%= render "form.html", Map.put(assigns, :action, Routes.list_path(@conn, :update, @list.slug)) %>
-
-<span><%= link "Back", to: Routes.list_path(@conn, :index) %></span>
