--- a/lib/listz_web/templates/list/form.html.eex
+++ b/lib/listz_web/templates/list/form.html.eex
@@ -1,19 +1,32 @@
-<%= form_for @changeset, @action, fn f -> %>
+<%= form_for @changeset, @action, [multipart: true], fn f -> %>
   <%= if @changeset.action do %>
-    <div class="alert alert-danger">
+    <div class="mb-8 bg-red-100 border-l-4 border-red-500 text-red-700 p-4" role="alert">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
-  <%= label f, :title %>
-  <%= text_input f, :title %>
-  <%= error_tag f, :title %>
+  <div class="mb-4">
+    <%= label f, :title %>
+    <%= text_input f, :title, class: "base-text-input" %>
+    <%= error_tag f, :title %>
+  </div>
 
-  <%= label f, :description %>
-  <%= textarea f, :description %>
-  <%= error_tag f, :description %>
+  <div class="mb-4">
+    <%= label f, :description %>
+    <%= textarea f, :description, class: "base-text-input" %>
+    <%= error_tag f, :description %>
+  </div>
+
+  <div class="mb-8">
+    <%= label f, :attachment %><br>
+    <%= file_input f, :attachment %>
+    <%= error_tag f, :attachment %>
+  </div>
 
   <div>
-    <%= submit "Save" %>
+    <%= submit "Save", class: "base-submit-btn" %>
+    <span class="ml-4">
+      <%= link "Back", to: Routes.list_path(@conn, :index), class: "text-blue-600" %>
+    </span>
   </div>
 <% end %>
