--- a/lib/listz_web/templates/list/index.html.eex
+++ b/lib/listz_web/templates/list/index.html.eex
@@ -1,17 +1,6 @@
 <h1 class="font-bold text-xl mb-6 mt-8">Lists</h1>
 
-<%= form_for @changeset, Routes.list_path(@conn, :create), fn f -> %>
-  <div class="flex">
-    <%= text_input f, :title, placeholder: "Add a new list", class: "bg-gray-200 appearance-none border-2 border-t border-b border-l border-gray-200 rounded-l w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-blue-500" %>
-    <%= submit "Save", class: "px-4 rounded-r bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 border-2 border-t border-b border-r border-blue-500 hover:border-blue-700" %>
-  </div>
-
-  <%= if error_tag(f, :title) != [] do %>
-    <div class="text-red-500 text-sm font-bold">
-      List title <%= error_tag f, :title %>
-    </div>
-  <% end %>
-<% end %>
+<%= live_render(@conn, ListzWeb.ListFormLive, session: %{}) %>
 
 <h2 class="font-semibold text-l mb-4 mt-8">Listing Lists</h2>
 
